--- a/back-end/build.gradle
+++ b/back-end/build.gradle
@@ -19,7 +19,13 @@ dependencies {
 	implementation 'com.h2database:h2:2.1.214'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	testImplementation 'org.apache.httpcomponents:httpclient'
 	implementation 'org.liquibase:liquibase-core'
+	compileOnly 'org.projectlombok:lombok:1.18.24'
+	annotationProcessor 'org.projectlombok:lombok:1.18.24'
+
+	testCompileOnly 'org.projectlombok:lombok:1.18.24'
+	testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
 }
 
 tasks.named('test') {
