--- a/back-end/src/test/resources/application.properties
+++ b/back-end/src/test/resources/application.properties
@@ -1,4 +1,8 @@
 spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:db;DB_CLOSE_DELAY=-1
+spring.datasource.url=jdbc:h2:mem:db
 spring.datasource.username=sa
 spring.datasource.password=sa
+spring.h2.console.enabled=true
+
+logging.level.liquibase=INFO
+spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
