--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:h2:mem:db
-spring.datasource.username=sa
-spring.datasource.password=sa
-spring.h2.console.enabled=true
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.hibernate.ddl-auto=update
 
 logging.level.liquibase=INFO
 spring.liquibase.change-log=classpath:/db/changelog/changelog-master.xml
